# ironBeetroot

./: .gitignore  CMakeLists.txt  README.md  projektIP.workspace  projektIP.workspace.layout
arm/: arm.c  arm.cbp  arm.depend  arm.h  arm.layout  arm_mem.loog  cmd.c  cmd.h  process.c  process.h
common/: arm.h  list.c  list.h  log.c  log.h  mem.c  mem.h  packet.c  packet.h  types.h
customer/: config.c  config.h  customer.c  customer.cbp  customer.depend  customer.h  customer.layout  process.c  process.h
givetake/: config.h  givetake.c  givetake.cbp  givetake.h  givetake.layout
hall/: arm.c  arm.h  config.h  hall.c  hall.cbp  hall.depend  hall.h  hall.layout  package.c  package.h  platform.c  platform.h  process.c  process.h
leader/: arm.c  arm.h  config.c  config.h  hall.c  hall.h  leader.c  leader.cbp  leader.depend  leader.h  leader.layout  package.c  package.h  platform.c  platform.h  process.c  process.h
logistyka/: logistyka.cbp  logistyka.layout
nadanie/: client.c  client.h  config.c  config.h  nadanie.c  nadanie.cbp  nadanie.depend  nadanie.h  nadanie.layout  process.c  process.h
odbior/: odbior.cbp
ramie/: ramie.c  ramie.cbp  ramie.depend  ramie.h  ramie.layout
show/: arm.h  customer.h  gfx.c  gfx.h  package.h  platform.h  process.c  process.h  show.c  show.cbp  show.depend  show.h  show.layout
symulacja/: arm.c  arm.h  config.c  config.h  hall.c  hall.h  package.c  package.h  platform.c  platform.h  server.c  server.h  serverProcess.c  serverProcess.h  symulacja.c  symulacja.cbp  symulacja.depend  symulacja.h  symulacja.layout
(+7 files in other folders)
